changes to javascript

--- a/index.html
+++ b/index.html
@@ -14,21 +14,25 @@
     <div lass="row">
 
       <div type="button" id="green" class="btn green">
+        <audio id="greenSound" autoplay>
+          <source src="./sounds/green.mp3" type="audio/mpeg">
+        </audio>
 
       </div>
 
       <div type="button" id="red" class="btn red">
-
+        <audio id="redSound" src="./sounds/red.mp3" type="audio/mpeg"></audio>
       </div>
     </div>
 
     <div class="row">
 
       <div type="button" id="yellow" class="btn yellow">
-
+        <audio id="yellowSound" src="./sounds/yellow.mp3" type="audio/mpeg"></audio>
       </div>
+      
       <div type="button" id="blue" class="btn blue">
-
+        <audio id="blueSound" src="./sounds/blue.mp3" type="audio/mpeg"></audio>
       </div>
 
     </div>
